--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --bg-primario: #ffffff;
     --bg-secundario: #347F4C;
+    --bg-terciario: #49b16a;
     --txt-primario: #ffffff;
     --txt-secundario: #000000;
     --txt-terciario: #5a5a5a;
@@ -18,13 +19,45 @@
 }
 
 body{
-    background-color: var(--bg-secundario);
+    
+    background-color: var(--bg-primario);
 }
-
+main{
+    display: flex;
+    justify-content: center; 
+    margin: 2em;
+    flex-direction: column;
+    /*
+    flex-direction: column;
+    padding: 2em; */
+}
 header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
+    background-color: var(--bg-secundario);
+    height: 5em;
+   
 }
+.Categoria{
+  color: var(--txt-primario);  
+  font-size: 1.7em;
+   margin: 3em;
+}
+.Frase{
+    border-radius: 3em;
+    width: 30em;
+    height: 4em;
+    background-color: var(--bg-terciario);
+    font-size: large;
+    /* margin: 5em; */
+    text-align: center;
+    padding: 1em;
+    
+}
+.ImagenEscuela img{
+    justify-content: center;
+    border-radius: 3em;
+    padding: 1em;
+} 
