avanzando con el index

--- a/assets/css/Variables.css
+++ b/assets/css/Variables.css
@@ -1,6 +1,7 @@
 :root {
     --bg-primario: #ffffff;
     --bg-secundario: #347F4C;
+    --bg-terciario: #45a563;
     --txt-primario: #ffffff;
     --txt-secundario: #000000;
     --txt-terciario: #5a5a5a;
