--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body{
 main{
     display: flex;
     justify-content: center; 
+    align-items: center;
     margin: 2em;
     flex-direction: column;
     /*
@@ -20,26 +21,99 @@ header{
     align-items: center;
     background-color: var(--bg-secundario);
     height: 5em;
+    gap: 2em;
    
 }
 .Categoria{
-  color: var(--txt-primario);  
-  font-size: 1.7em;
-   margin: 3em;
+  color: var(--txt-primario);
+  font-size: 1.6em;
+  padding: 0.5em 1em;
+  margin: 0 1em;
+  transition: background-color 0.3s, color 0.3s;
+  font-weight: bold;
+}
+.actual{
+  background-color: var(--bg-terciario);
+  color: white;
+  border-radius: 1em;
+  font-weight: bold;
 }
 .Frase{
     border-radius: 3em;
     width: 30em;
     height: 4em;
     background-color: var(--bg-terciario);
-    font-size: large;
+    color: var(--txt-primario) ;
+    font-size: larger;
     /* margin: 5em; */
     text-align: center;
     padding: 1em;
     
 }
-.ImagenEscuela img{
+.ImagenEscuela {
+    margin-top: 1em;
+    display: flex;
     justify-content: center;
-    border-radius: 3em;
+    align-items: center;
     padding: 1em;
-} 
+}
+.ImagenEscuela img {
+    /* border-radius: 3em; */
+    max-width: 100%;
+    height: auto;
+}
+.LogoEscuela {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -25em; /* encima la imagen */
+}
+
+.LogoEscuela img {
+    border-radius: 100%;
+    width: 80em; 
+    height: auto;
+}
+.BloqueInfo{
+text-align: center;
+color: var(--bg-secundario);
+
+}
+.Items{
+font-size: larger;
+}
+.Info{
+    text-align: left;
+    color: var(--txt-terciario);
+    margin-top: 2em;
+    margin-bottom: 2em;
+     margin-left: 6em; 
+     margin-right: 6em;
+    font-size: large;
+}
+footer {
+    background-color: var(--bg-secundario); 
+    padding: 1em 0;
+    margin-top: 2em;
+    height: 5em;
+}
+
+.footer-redes {
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+    align-items: center;
+    text-decoration: none;
+    color: var(--txt-primario);
+}
+
+a {
+    text-decoration: none;
+    color: var(--txt-primario);
+}
+
+i {
+    font-size: 2em;
+    transition: transform 0.3s ease;
+}
+
